--- a/index.html
+++ b/index.html
@@ -24,24 +24,16 @@
                         <!-- Logo -->
                         <img
                             src="./assets/img/Header-Logo.svg"
-                            alt="Lesson."
+                            alt="Lesson logo"
                             class="logo"
                         />
                         <!-- Nav -->
                         <nav class="nav">
                             <ul>
-                                <li class="active">
-                                    <a href="#!">Home</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Courses</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Pricing</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Reviews</a>
-                                </li>
+                                <li class="active"><a href="#!">Home</a></li>
+                                <li><a href="#!">Courses</a></li>
+                                <li><a href="#!">Pricing</a></li>
+                                <li><a href="#!">Reviews</a></li>
                             </ul>
                         </nav>
                         <!-- Action -->
@@ -51,6 +43,83 @@
                     </div>
                 </div>
             </header>
+            <div class="hero">
+                <div class="main-content">
+                    <div class="body">
+                        <!-- Hero left -->
+                        <div class="media-block">
+                            <img
+                                src="./assets/img/guy-lesson 1.svg"
+                                alt="Learn without limits and spread knowledge."
+                                class="img"
+                            />
+                            <div class="card">
+                                <div class="item">
+                                    <div class="icon y">
+                                        <img
+                                            src="./assets/img/Orion_page.svg"
+                                            alt="Course icon"
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">20 Courses</p>
+                                        <p class="title">UI/UX Design</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="icon p">
+                                        <img
+                                            src="./assets/img/Orion_code-window.svg"
+                                            alt="Course icon"
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">20 Courses</p>
+                                        <p class="title">Development</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="icon b">
+                                        <img
+                                            src="./assets/img/Orion_megaphone.svg"
+                                            alt="Course icon"
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">30 Courses</p>
+                                        <p class="title">Marketing</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Hero right -->
+                        <div class="content-block">
+                            <h1 class="heading">
+                                Learn without limits and spread knowledge.
+                            </h1>
+                            <p class="desc">
+                                Build new skills for that “this is my year”
+                                feeling with courses, certificates, and degrees
+                                from world-class universities and companies.
+                            </p>
+                            <div class="cta-group">
+                                <a href="#!" class="btn">See Courses</a>
+                                <button class="watch-video">
+                                    <div class="icon">
+                                        <div class="img"></div>
+                                    </div>
+                                    <span>Watch Video</span>
+                                </button>
+                            </div>
+                            <p class="desc">Recent engagement</p>
+                            <p class="desc">
+                                <strong>50K</strong> Students
+                                <strong>70+</strong> Courses
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
