--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                                 from world-class universities and companies.
                             </p>
                             <div class="cta-group">
-                                <a href="#!" class="btn">See Courses</a>
+                                <a href="#!" class="btn hero-cta"
+                                    >See Courses</a
+                                >
                                 <button class="watch-video">
                                     <div class="icon">
                                         <div class="img"></div>
@@ -111,8 +113,8 @@
                                     <span>Watch Video</span>
                                 </button>
                             </div>
-                            <p class="desc">Recent engagement</p>
-                            <p class="desc">
+                            <p class="desc stats">Recent engagement</p>
+                            <p class="desc stats">
                                 <strong>50K</strong> Students
                                 <strong>70+</strong> Courses
                             </p>
