done popular+feedback

--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&display=swap"
             rel="stylesheet"
         />
+        <!-- fa -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <!-- CSS -->
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <main style="height: 5000px">
+            <!-- Fixed Header -->
             <header class="header fixed">
                 <div class="main-content">
                     <div class="body">
@@ -43,6 +52,8 @@
                     </div>
                 </div>
             </header>
+
+            <!-- Hero -->
             <div class="hero">
                 <div class="main-content">
                     <div class="body">
@@ -97,7 +108,7 @@
                             <h1 class="heading">
                                 Learn without limits and spread knowledge.
                             </h1>
-                            <p class="desc">
+                            <p class="word-break desc line-clamp line-2">
                                 Build new skills for that “this is my year”
                                 feeling with courses, certificates, and degrees
                                 from world-class universities and companies.
@@ -118,6 +129,189 @@
                                 <strong>50K</strong> Students
                                 <strong>70+</strong> Courses
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Popular -->
+            <div class="popular">
+                <div class="main-content">
+                    <!-- Top -->
+                    <div class="popular-top">
+                        <div class="info">
+                            <h2 class="heading">Our popular courses</h2>
+                            <p class="word-break desc line-clamp line-2">
+                                Build new skills with new trendy courses and
+                                shine for the next future career.
+                            </p>
+                        </div>
+                        <div class="controls">
+                            <button class="control-btn" aria-label="Left">
+                                <i class="fa-solid fa-chevron-left"></i>
+                            </button>
+                            <button class="control-btn" aria-label="right">
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Bottom -->
+                    <div class="course-list">
+                        <!-- item 1 -->
+                        <div class="course-item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/popular-img-1.png"
+                                    alt=""
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">
+                                        <a
+                                            href="#!"
+                                            class="line-clamp word-break"
+                                            >Basic web design</a
+                                        >
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/img/popular-star.svg"
+                                            alt=""
+                                            class="star"
+                                        />
+                                        <span class="value">4.5</span>
+                                    </div>
+                                </div>
+                                <p class="word-break desc line-clamp line-2">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="bottom">
+                                    <h3 class="title">$120.75</h3>
+                                    <a href="#!" class="btn popular-btn"
+                                        >Book Now</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- item 2 -->
+                        <div class="course-item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/popular-img-2.png"
+                                    alt=""
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">
+                                        <a
+                                            href="#!"
+                                            class="line-clamp word-break"
+                                            >UI/UX design</a
+                                        >
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/img/popular-star.svg"
+                                            alt=""
+                                            class="star"
+                                        />
+                                        <span class="value">4.9</span>
+                                    </div>
+                                </div>
+                                <p class="word-break desc line-clamp line-2">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="bottom">
+                                    <h3 class="title">$230</h3>
+                                    <a href="#!" class="btn popular-btn"
+                                        >Book Now</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- item 3 -->
+                        <div class="course-item">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/popular-img-3.png"
+                                    alt=""
+                                    class="thumb"
+                            /></a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">
+                                        <a
+                                            href="#!"
+                                            class="line-clamp word-break"
+                                            >Web App design</a
+                                        >
+                                    </h3>
+                                    <div class="rating">
+                                        <img
+                                            src="./assets/img/popular-star.svg"
+                                            alt=""
+                                            class="star"
+                                        />
+                                        <span class="value">4.7</span>
+                                    </div>
+                                </div>
+                                <p class="word-break desc line-clamp line-2">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="bottom">
+                                    <h3 class="title">$169.25</h3>
+                                    <a href="#!" class="btn popular-btn"
+                                        >Book Now</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Feedback -->
+            <div class="feedback">
+                <div class="main-content">
+                    <div class="feedback-list">
+                        <div class="feedback-item">
+                            <div class="info">
+                                <img
+                                    src="assets/img/avatar-fback.jpg"
+                                    alt=""
+                                    class="avatar"
+                                />
+                                <p class="title">Peter Moor</p>
+                                <p class="desc">Student of Web Design</p>
+                                <div class="dots">
+                                    <span class="dot"></span>
+                                    <span class="dot active"></span>
+                                    <span class="dot"></span>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <img
+                                    src="assets/img/oqen-quote.svg"
+                                    alt=""
+                                    class="open-quotes"
+                                />
+                                <blockquote>
+                                    Not only does my resume look
+                                    impressive—filled with the names and logos
+                                    of world-class institutions—but these
+                                    certificates also bring me closer to my
+                                    career goals by validating the skills I've
+                                    learned."
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
                 </div>
