--- a/index.html
+++ b/index.html
@@ -289,8 +289,10 @@
                                     alt=""
                                     class="avatar"
                                 />
-                                <p class="title">Peter Moor</p>
-                                <p class="desc">Student of Web Design</p>
+                                <p class="title">Duy Lee</p>
+                                <p class="desc">
+                                    IT student at Hunre University
+                                </p>
                                 <div class="dots">
                                     <span class="dot"></span>
                                     <span class="dot active"></span>
@@ -313,6 +315,133 @@
                                 </blockquote>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Features 1 -->
+            <div class="features">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="image">
+                            <img src="assets/img/features-img-1.avif" alt=""
+                            /style="left:0;bottom:0"> <img
+                            src="assets/img/features-img-2.avif" alt=""
+                            /style="top:0;right:0">
+                        </div>
+                        <div class="content">
+                            <h2 class="heading">
+                                Learner outcomes through our awesome platform
+                            </h2>
+                            <p class="desc">
+                                87% of people learning for professional
+                                development report career benefits like getting
+                                a promotion, a raise, or starting a new career.
+                            </p>
+                            <p class="desc">Lesson Impact Report (2022)</p>
+                            <a href="#!" class="btn">Sign Up</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Features 2 -->
+            <div class="features features-2">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="image">
+                            <img src="assets/img/features-img-3.avif" alt=""
+                            /style="left:0;bottom:0">
+                        </div>
+                        <div class="content">
+                            <h2 class="heading">
+                                Take the next step toward your personal and
+                                professional goals with Lesson.
+                            </h2>
+                            <p class="desc">
+                                Take the next step toward. Join now to receive
+                                personalized and more recommendations from the
+                                full Coursera catalog.
+                            </p>
+
+                            <a href="#!" class="btn">Join now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Blog -->
+            <div class="blog">
+                <div class="main-content">
+                    <div class="blog-top">
+                        <h2 class="heading">Our blog</h2>
+                        <p class="desc">
+                            Read our regular travel blog and know the latest
+                            update of tour and travel
+                        </p>
+                    </div>
+                    <div class="blog-list">
+                        <!-- Item 1-->
+                        <div class="item">
+                            <img
+                                src="assets/img/blog-1.avif"
+                                alt=""
+                                class="thumb"
+                            />
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Item 2-->
+                        <div class="item">
+                            <img
+                                src="assets/img/blog-2.avif"
+                                alt=""
+                                class="thumb"
+                            />
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Item 3-->
+                        <div class="item">
+                            <img
+                                src="assets/img/blog-3.avif"
+                                alt=""
+                                class="thumb"
+                            />
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!"
+                                        >How to become a pro web designer in
+                                        2022 and get remot job?</a
+                                    >
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dots">
+                        <span class="dot"></span>
+                        <span class="dot active"></span>
+                        <span class="dot"></span>
                     </div>
                 </div>
             </div>
