--- a/index.html
+++ b/index.html
@@ -25,34 +25,34 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <main style="height: 5000px">
-            <!-- Fixed Header -->
-            <header class="header fixed">
-                <div class="main-content">
-                    <div class="body">
-                        <!-- Logo -->
-                        <img
-                            src="./assets/img/Header-Logo.svg"
-                            alt="Lesson logo"
-                            class="logo"
-                        />
-                        <!-- Nav -->
-                        <nav class="nav">
-                            <ul>
-                                <li class="active"><a href="#!">Home</a></li>
-                                <li><a href="#!">Courses</a></li>
-                                <li><a href="#!">Pricing</a></li>
-                                <li><a href="#!">Reviews</a></li>
-                            </ul>
-                        </nav>
-                        <!-- Action -->
-                        <div class="action">
-                            <a href="#!" class="btn signup-btn">Sign Up</a>
-                        </div>
+        <!-- Fixed Header -->
+        <header class="header fixed">
+            <div class="main-content">
+                <div class="body">
+                    <!-- Logo -->
+                    <img
+                        src="./assets/img/Header-Logo.svg"
+                        alt="Lesson logo"
+                        class="logo"
+                    />
+                    <!-- Nav -->
+                    <nav class="nav">
+                        <ul>
+                            <li class="active"><a href="#!">Home</a></li>
+                            <li><a href="#!">Courses</a></li>
+                            <li><a href="#!">Pricing</a></li>
+                            <li><a href="#!">Reviews</a></li>
+                        </ul>
+                    </nav>
+                    <!-- Action -->
+                    <div class="action">
+                        <a href="#!" class="btn signup-btn">Sign Up</a>
                     </div>
                 </div>
-            </header>
+            </div>
+        </header>
 
+        <main>
             <!-- Hero -->
             <div class="hero">
                 <div class="main-content">
@@ -446,5 +446,106 @@
                 </div>
             </div>
         </main>
+
+        <!-- Footer -->
+        <div class="footer">
+            <div class="main-content">
+                <div class="row">
+                    <!-- COL -->
+                    <div class="first-col">
+                        <img src="assets/img/Lesson..svg" alt="" class="logo" />
+                        <p class="desc">
+                            Need to help for your dream Career? trust us. With
+                            Lesson, study becomes a lot easier with us.
+                        </p>
+                        <div class="socials">
+                            <a href="#!">
+                                <img
+                                    src="assets/img/footer icon.svg"
+                                    alt=""
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="assets/img/footer icon.svg"
+                                    alt=""
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="assets/img/footer icon.svg"
+                                    alt=""
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="assets/img/footer icon.svg"
+                                    alt=""
+                                    class="icon"
+                                />
+                            </a>
+                        </div>
+                    </div>
+                    <!-- COL -->
+                    <div class="col">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#!">Features </a>
+                            </li>
+                            <li>
+                                <a href="#!">Our Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Latest News</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- COL -->
+                    <div class="col">
+                        <h3 class="heading">Support</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">FAQ's</a>
+                            </li>
+                            <li>
+                                <a href="#!">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a href="#!">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- COL -->
+                    <div class="col last-col">
+                        <h3 class="heading">Address</h3>
+                        <ul class="list">
+                            <p class="desc">
+                                <strong>Location:</strong> 27 Division St, New
+                                York, NY 10002, USA
+                            </p>
+                            <p class="desc">
+                                <strong>Email:</strong> email@gmail.com
+                            </p>
+                            <p class="desc">
+                                <strong>Phone:</strong> + 000 1234 567 890
+                            </p>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
